# bdd-automation-ide-inspector

./: .gitignore  README.md  main.py  makefile  pyproject.toml
containers/mac/: docker-compose.yaml
containers/nvidia/: docker-compose.yaml
features/: environment.py  teste.feature
features/steps/: teste_steps.py
src/: ai_engine.py  crawler.py  editor.py  generator.py  inspector.py  main_tool_bar.py  settings.py  workers.py
